一次性更新

--- a/application/manage/view/Business/addbus.html
+++ b/application/manage/view/Business/addbus.html
@@ -2,12 +2,12 @@
 <div class="container">
 	<div class="row" style="margin-top: 20px;padding: 20px;">
 		<form class="layui-form layui-form-pane">
-			<div class="layui-form-item"> <label class="layui-form-label">企业账号</label>
-				<div class="layui-input-block"> <input name="TEL" autocomplete="off" lay-verify="required|tel" {notempty name="$info.TEL"}disabled{/notempty}  placeholder="请输入企业账号" class="layui-input" type="text" value="{$info.TEL|default=''}"> </div>
+			<div class="layui-form-item"> <label class="layui-form-label"><font color="red" size="+2">*</font>手机号码</label>
+				<div class="layui-input-block"> <input name="TEL" autocomplete="off" lay-verify="required|tel" {notempty name="$info.TEL"}disabled{/notempty}  placeholder="请输入手机号码，用于企业后台登录账号" class="layui-input" type="text" value="{$info.TEL|default=''}"> </div>
 			</div>
 			<div class="layui-form-item">
 				<div class="layui-inline">
-			      <label class="layui-form-label">企业密码</label>
+			      <label class="layui-form-label"><font color="red" size="+2">*</font>企业密码</label>
 			      <div class="layui-input-inline">
 			        <input name="Store_pass" {empty name="$info.Store_pass"}lay-verify="required|pass"{/empty}autocomplete="off" placeholder="请输入企业密码" class="layui-input" type="text" value="">
 			      </div>
@@ -18,7 +18,7 @@
 			      	<input name="Statue" title="启用" {eq name="$info.Statue|default=''" value="1"}checked{/eq}  type="checkbox" value="1">
 			      </div>
 			    </div>
-			</div>			<div class="layui-form-item"> <label class="layui-form-label">企业名称</label>
+			</div>			<div class="layui-form-item"> <label class="layui-form-label"><font color="red" size="+2">*</font>企业名称</label>
 				<div class="layui-input-block"> <input name="store_name" autocomplete="off" lay-verify="required"  placeholder="请输入企业名称" class="layui-input" type="text" value="{$info.store_name|default=''}"> </div>
 			</div>
 			<div class="layui-form-item"> <label class="layui-form-label">所属地区</label>
@@ -32,18 +32,18 @@
 				<select id="area" name="position_id2"></select>
 				</div>
 			</div>
-			<div class="layui-form-item"> <label class="layui-form-label">企业地址</label>
+			<div class="layui-form-item"> <label class="layui-form-label"><font color="red" size="+2">*</font>企业地址</label>
 				<div class="layui-input-block"> <input name="Address" autocomplete="off" lay-verify="required"  placeholder="请输入企业地址" class="layui-input" type="text" value="{$info.Address|default=''}"> </div>
 			</div>
 			<div class="layui-form-item">
 				<div class="layui-inline">
-			      <label class="layui-form-label">联系人</label>
+			      <label class="layui-form-label"><font color="red" size="+2">*</font>联系人</label>
 			      <div class="layui-input-inline">
 			        <input name="Lianxir" lay-verify="required|zh" autocomplete="off" placeholder="请输入企业联系人" class="layui-input" type="text" value="{$info.Lianxir|default=''}">
 			      </div>
 			    </div>
 			    <div class="layui-inline">
-			      <label class="layui-form-label">邮箱</label>
+			      <label class="layui-form-label"><font color="red" size="+2">*</font>邮箱</label>
 			      <div class="layui-input-inline">
 			        <input name="email" lay-verify="email" autocomplete="off" placeholder="请输入邮箱" class="layui-input" type="text" value="{$info.email|default=''}">
 			      </div>
@@ -60,12 +60,12 @@
 			      
 			    </div>
 			</div>			
-			<div class="layui-form-item"> <label class="layui-form-label">短信条数</label>
+			<div class="layui-form-item"> <label class="layui-form-label"><font color="red" size="+2">*</font>短信条数</label>
 				<div class="layui-input-inline"> <input name="message_amount" autocomplete="off" lay-verify="required|num"  placeholder="请输入短信条数" class="layui-input" type="text" value="{$info.message_amount|default='0'}"> </div>
 			</div>
 			<div class="layui-form-item">
 				<div class="layui-inline">
-			      <label class="layui-form-label">子门店数量</label>
+			      <label class="layui-form-label"><font color="red" size="+2">*</font>子门店数</label>
 			      <div class="layui-input-inline">
 			        <input name="add_number" lay-verify="required|num" autocomplete="off" placeholder="请输入子门店数量" class="layui-input" type="text" value="{$info.add_number|default='1'}">
 			      </div>
@@ -80,7 +80,7 @@
 			<div class="layui-form-item"> <label class="layui-form-label">软件版本</label>
 				<div class="layui-input-block"> <input name="version" autocomplete="off" lay-verify=""  placeholder="请输入软件版本号" class="layui-input" type="text" value="{$info.version|default=''}"> </div>
 			</div>
-			<div class="layui-form-item"> <label class="layui-form-label">证件上传</label>
+			<div class="layui-form-item"> <label class="layui-form-label"><font color="red" size="+2">*</font>证件上传</label>
 				<div class="uploadimgbox">
 					<a href="javascript:;" class="yyzz" onclick="upimg('#yyzz');"  title="营业执照">{notempty name="$info.yyzzImg"}<img src="__ROOT__{$info.yyzzImg}" width="100%" >{else /}营业执照{/notempty}</a>
 					<a href="javascript:;" class="sfz" onclick="upimg('#sfz');" title="身份证">{notempty name="$info.sfzImg"}<img src="__ROOT__{$info.sfzImg}" width="100%" >{else /}身份证{/notempty}</a>
@@ -105,7 +105,7 @@
 			</div>
 			
 			<div class="layui-form-item">
-				<div class="layui-input-block text-center"><a class="layui-btn" lay-submit lay-filter="send" dataurl="{:URL('business/addbus')}">立即提交</a> <button type="reset" class="layui-btn layui-btn-primary">重置</button> </div>
+				<div class="layui-input-block text-center"><a class="layui-btn" lay-submit lay-filter="send" dataurl="{:URL('business/addbus')}">立即提交</a>  </div>
 			</div>
 
 				{notempty name="info.TEL"}
