--- a/application/manage/view/goods/index.html
+++ b/application/manage/view/goods/index.html
@@ -160,7 +160,7 @@
 					<a class="layui-btn layui-bg-green allstatus" datatype="allon" dataurl='allon'><i class="fa fa-check"></i>	启用</a>
 					<a class="layui-btn layui-btn-primary allstatus" datatype="alloff" dataurl='allon'><i class="fa fa-close"></i>禁用</a>
 					<a class="layui-btn layui-btn-danger allstatus"  datatype="alldel" dataurl='alldel'><i class="fa fa-trash-o"></i>删除选中</a>
-					<a class="layui-btn  add" title="添加企业" dataurl="{:URL('goods/addgoods')}"><i class="fa fa-plus"></i>添加商品</a>
+					<a class="layui-btn  add" title="添加商品" dataurl="{:URL('goods/addgoods')}"><i class="fa fa-plus"></i>添加商品</a>
 
 				</div>
 
