--- a/application/manage/view/login/index.html
+++ b/application/manage/view/login/index.html
@@ -2,23 +2,16 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!-- Meta, title, CSS, favicons, etc. -->
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>贵州小草商盟后台管理系统</title>
-
-  <link href="__BOOTSTRAP__/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="__BOOTSTRAP__/dist/css/bootstrap.css" rel="stylesheet">
   <link href="__FONT__/font-awesome.min.css" rel="stylesheet">
-
-  <!-- <link href="__PUBLIC__/plus/vendors/animate.css/animate.min.css" rel="stylesheet"> -->
   <link href="__MANAGE__/build/css/custom.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="__LAYUI__/css/layui.css">
+  <link rel="stylesheet" type="text/css" href="__LAYUI__/css/layui.css" media="screen">
   <script src="__MANAGE__/js/jquery.min.js"></script>
   <script src="__LAYUI__/layui.js"></script>
-
-  
 </head>
 <style>
 *body{height:100%}
@@ -31,28 +24,27 @@
 .login i{position: absolute;left: 15px;top:16px;font-size: 20px;}
 </style>
 <body style="background: #FFF url(__MANAGE__/images/loginbg.jpg);">
-
- 
 <div class="login">
-	    <h1><img src="__MANAGE__/images/logo1.png" width="80" />小草商盟</h1>
-	    <form class="layui-form mb-20">
-	    	
+
+	
+	    <form class="layui-form layui-form-pane mb-20">
+	    	<h1><img src="__MANAGE__/images/logo1.png" width="80" />小草商盟</h1>	
 	    	<div class="layui-form-item"><i class="fa fa-user"></i>
-				<input class="layui-input layui-btn-lg" style="padding: 25px 50px;" name="username" id="username" placeholder="请输入手机号码" lay-verify="required|phone" type="text" autocomplete="off"  value="">
+	    		
+				<input class="layui-input" style="padding: 0 40px;height: 50px;" name="username" id="username" placeholder="请输入手机号码" lay-verify="required|phone" type="text" autocomplete="off"  value="">
 		    </div>
 		    <div class="layui-form-item"><i class="fa fa-key"></i>
-				<input class="layui-input layui-btn-lg" style="padding: 25px 50px;" name="password" id="password" placeholder="密码" lay-verify="required|pass" type="password" autocomplete="off" value="">
+				<input class="layui-input" style="padding: 0 40px;height: 50px;" name="password" id="password" placeholder="密码" lay-verify="required|pass" type="password" autocomplete="off" value="">
 		    </div>
 		    <div class="layui-form-item form_code"><i class="fa fa-puzzle-piece"></i>
-				<input class="layui-input layui-btn-lg" style="padding: 25px 50px;" name="code" id="code" placeholder="验证码" lay-verify="required" type="text" autocomplete="off" value="">
+				<input class="layui-input" style="padding: 0 40px;height: 50px;" name="code" id="code" placeholder="验证码" lay-verify="required" type="text" autocomplete="off" value="">
 				<div class="code"><img src="{:captcha_src()}" width="166" height="49" onclick="this.src='{:captcha_src()}?seed='+Math.random()" id="captcha"></div>
 		    </div>
-			<a id="submit" class="layui-btn login_btn layui-btn-lg" style="line-height: 50px;height: 50px;font-size: 20px;" lay-submit="" lay-filter="demo1">登录</a>
+			<a id="submit" class="layui-btn login_btn" style="line-height: 50px;height: 50px;font-size: 20px;" lay-submit="" lay-filter="demo1">登录</a>
 	   </form>	   	
 
 </div>
- 
-</section>	
+
 
  
 <script>
@@ -103,6 +95,7 @@ document.onkeydown = function(e){
          $('#submit').click();
         }
     }
+$('.layui-form').find('input').first().focus();
 </script>
 
 </body>
