--- a/application/manage/view/menu/addmenu.html
+++ b/application/manage/view/menu/addmenu.html
@@ -14,7 +14,7 @@
 				</select>
 				</div>
 			</div>
-			<div class="layui-form-item"> <label class="layui-form-label">菜单名称</label>
+			<div class="layui-form-item"> <label class="layui-form-label"><font color="red" size="+2">*</font>菜单名称</label>
 				<div class="layui-input-block"> <input name="Menu_name" autocomplete="off" lay-verify="required"  placeholder="请输入名称" class="layui-input" type="text" value="{$info.Menu_name|default=''}"> </div>
 			</div>
 			<div class="layui-form-item"> <label class="layui-form-label">链接地址</label>
@@ -37,7 +37,7 @@
 				<div class="layui-input-block"> <input name="Menu_icon" id="menuico" autocomplete="off" placeholder="请输入图标" class="layui-input" type="text" value="{$info.Menu_icon|default=''}"> </div>
 			</div>
 			<div class="layui-form-item">
-				<div class="layui-input-block"><a class="layui-btn" lay-submit lay-filter="send" dataurl="{:URL('menu/addmenu')}">立即提交</a> <button type="reset" class="layui-btn layui-btn-primary">重置</button> </div>
+				<div class="layui-input-block"><a class="layui-btn" lay-submit lay-filter="send" dataurl="{:URL('menu/addmenu')}">立即提交</a>  </div>
 			</div>
 
 				{notempty name="info.ID"}
