--- a/application/manage/view/Shop/index.html
+++ b/application/manage/view/Shop/index.html
@@ -12,7 +12,7 @@
 				<div  class="layui-input-inline"> 
 				<select id="area" name="position_id2"></select>
 				</div>
-				<div class="layui-input-inline"><input type="text" name="keyword" class="layui-input" placeholder="请输入企业名称" /></div>
+				<div class="layui-input-inline"><input type="text" name="keyword" class="layui-input" placeholder="请输入店铺名称" /></div>
 				<div class="layui-input-inline"><button type="submit" name="submit" class="layui-btn" >搜索</button></div>
 				
 				<a class="layui-btn f-r add" title="添加店铺" dataurl="{:URL('shop/addshop')}">添加店铺</a>
@@ -29,22 +29,23 @@
 			<div class="md-5 pd-20 {eq name='$v.Statue' value='1'}layui-bg-blue {else/}layui-bg-red{/eq}  ">
 				<h2 class="mb-20 mt-10">{$v.store_name}</h2>
 				<div class="pl-15">
+					<p class="mb-10"><i class="fa fa-shopping-bag mr-10"></i>店铺编号：{$v.store_code}</p>
 					<p class="mb-10"><i class="fa fa-money mr-10"></i>当日营业额：</p>
 					<p class="mb-10"><i class="fa fa-user mr-10"></i>当班收银员：{$v.Lianxir}</p>
 					<p class="mb-10"><i class="fa fa-phone mr-10"></i>联系电话：{$v.TEL}</p>				
 					<p class="mb-10"><i class="fa fa-desktop mr-10"></i>设备状态： 
 						<span class="layui-badge layui-bg-cyan">离线</span>  
 						<span class="layui-badge layui-bg-green">在线</span>  
-						<span class="layui-badge layui-bg-blue">版本号：V1.0.0</span></p>
-					
+						<span class="layui-badge layui-bg-blue">版本号：V1.0.0</span></p>					
 				</div>
 			</div>
 			<div class="actbox">
 				
 				<div class="layui-btn-group">
 					{eq name='$v.Statue' value='1'}
-					<button class="layui-btn layui-btn-sm layui-bg-gray add" title="修改" title="修改企业" dataurl="{:URL('shop/addshop',array('tel'=>$v['TEL']))}"><i class="fa fa-edit"></i></button>					
+					<button class="layui-btn layui-btn-sm layui-bg-gray add" title="修改" dataurl="{:URL('shop/addshop',array('tel'=>$v['TEL']))}"><i class="fa fa-edit"></i></button>					
 					<button class="layui-btn layui-btn-sm layui-bg-red status " title="禁用" dataid="{$v.TEL}"><i class="fa fa-close"></i></button>
+					<button class="layui-btn  layui-btn-sm layui-bg-orange bold add" title="支付设置" dataurl="{:URL('shop/payset',array('dpid'=>$v['store_code'],'ucode'=>$v['user_code']))}">支付设置</button>					
 					{else/}
 					<button class="layui-btn layui-btn-sm layui-bg-green status" title="启用" dataid="{$v.TEL}"><i class="fa fa-check"></i></button>
 					{/eq}
